--- a/Student/veiw_profile.html
+++ b/Student/veiw_profile.html
@@ -3,33 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Student Profile</title>
+      <link rel="stylesheet" href="indexs.css">
 </head>
 <body>
-    <center>
-        <h1>Student Profile</h1>
-    </center>
+    <h1 style=" color: #a8a6f5(254, 219, 247); background-color: #ffc0e9 ; text-align: center;">Student Profile</h1>
+<div class="student-card">
     <table align="center">
         <tr>
             <td>
-                <center> <h3>Welcome to the Student Dashboard</h3></center>
+                <center><h2> Welcome to the student Dashboard</h2></center>
             </td>
         </tr>
         <tr>
             <td>
-                <center><img src="Student_Media/Student profile logo.png" alt="Profile logo" width="100" height="100"></center>
-            </td>
-            <td>
-                Hello!!Currently, you are viewing your profile.
-                <br>
-                Welcome to Student Profile
-                <br>
-                Here you can view your courses, results, and other details.
+                 <center><img src="Student_Media/Student profile logo.png" alt="student" class="student-img"></center>
             </td>
         </tr>
         <tr>
             <td>
-                <ul>
+                <ul class="list-style">
                     <li>
                         My Profile
                     </li>
@@ -57,5 +50,6 @@
             <td><italic>Batch   </italic></td> <td><underline>2023</underline></td>
         </tr>
     </table>
+</div>
 </body>
 </html>
