--- a/Admin/profile.html
+++ b/Admin/profile.html
@@ -4,32 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin profile</title>
+      <link rel="stylesheet" href="indexs.css">
+       
 </head>
 <body>
-    <center>
-        <h1>Admin Profile</h1>
-    </center>
+    <h1 style=" color: #a8a6f5(254, 219, 247); background-color: #ffc0e9 ; text-align: center;">Admin Profile</h1>
+<div class="admin-card">
     <table align="center">
         <tr>
             <td>
-                <center> <h3>Welcome to the Admin Dashboard</h3></center>
+                <center><h2>Welcome to the admin Dashboard</h2></center>
+            </td>
+            
+        </tr>
+        <tr>
+            <td>
+                <center><img src="Admin_Media/Admin Profile logo.png" alt="Faculty" class="admin-img"></center>
             </td>
         </tr>
         <tr>
             <td>
-                <center><img src="Admin_Media/Admin Profile logo.png" alt="Profile logo" width="100" height="100"></center>
-            </td>
-            <td>
-                You can manage users, results, and announcements here.
-                <br>
-                Stay updated and keep your dashboard organized efficiently.
-                <br>
-                You can manage users, results, and announcements here.
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <ul>
+                <ul class="list-style">
                     <li>
                         Manage Users
                     </li>
@@ -57,5 +52,6 @@
             <td><italic>Ravi    </italic></td> <td><underline>admin@univ.edu    </underline></td>
         </tr>
     </table>
+</div>
 </body>
 </html>
