--- a/Faculty/Faculty_index.html
+++ b/Faculty/Faculty_index.html
@@ -4,52 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="indexs.css">
 </head>
 <body>
+    <div class="container">
     <center>
         <h1> Faculty Dashboard</h1>
     </center>
-    <table border="5" align="center">
-        <tr>
-            <td>
-                 <a href="http://127.0.0.1:5500/Admin/user_management.html">
-                     <img src="" alt="Post Marks logo" width="100" height="100"> 
+    <div class="grid">
+        <div class="card">
+                 <a href="http://127.0.0.1:5500/Faculty/post_marks.html">
+                     <img src="Faculty_Media/Post Marks logo.png" alt="Post Marks logo" width="100" height="100"> 
                      Post Marks
                  </a>
-            </td>
-            <td>
-                 <a href="http://127.0.0.1:5500/Admin/course_management.html">
-                     <img src="Profile logo.png" alt="Course Management logo" width="100" height="100">
+        </div>
+        <div class="card">
+                 <a href="http://127.0.0.1:5500/Faculty/profile.html">
+                     <img src="Faculty_Media/Profile logo.png" alt="Profile logo" width="100" height="100">
                      Profile
                  </a>
-            </td>
-            <td>
-                <a href="http://127.0.0.1:5500/Admin/c_ft.html">
-                    <img src="Veiw Course logo.png" alt="Course Mapped Faculty logo" width="100" height="100">
+        </div>
+        <div class="card">
+                <a href="http://127.0.0.1:5500/Faculty/veiw_course.html">
+                    <img src="Faculty_Media/Veiw Course logo.png" alt="Veiw Course logo" width="100" height="100">
                     Veiw Course
                 </a>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <a href="http://127.0.0.1:5500/Admin/c_st.html">
-                    <img src="Veiw Report logo.png" alt="Course Mapped Students logo" width="100" height="100">
+        </div>
+        <div class="card">
+                <a href="http://127.0.0.1:5500/Faculty/veiw_report.html">
+                    <img src="Faculty_Media/Veiw Report logo.jpeg" alt="Veiw Report logo" width="100" height="100">
                     Veiw Report
                 </a>
-            </td>
-            <td>
-                <a href="http://127.0.0.1:5500/Admin/result.html">
-                    <img src="Veiw Student Course logo.png" alt="Result Analysis logo" width="100" height="100">
-                    Veiw Student Course
+        </div> 
+        <div class="card">
+                <a href="http://127.0.0.1:5500/Faculty/veiw_result.html">
+                    <img src="Faculty_Media/View Result logo.png"  width="100" height="100">
+                    View Result
                 </a>
-            </td>
-            <td>
-                <a href="http://127.0.0.1:5500/Admin/report.html">
-                    <img src="Veiw Result logo.png" alt="Report logo" width="100" height="100">
-                    Veiw Result
-                </a>
-            </td>
-        </tr>
-    </table>
+        </div>
+    </div>
+</div>
 </body>
 </html>
