--- a/Faculty/profile.html
+++ b/Faculty/profile.html
@@ -3,33 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Faculty Profile</title>
+    <link rel="stylesheet" href="indexs.css">
+   
 </head>
 <body>
-    <center>
-        <h1>Faculty Profile</h1>
-    </center>
-    <table align="center">
-        <tr>
+    <h1 style=" color: #a8a6f5(254, 219, 247); background-color: #ffc0e9 ; text-align: center;">Faculty Profile</h1>
+<div class="faculty-card">
+ <table align="center">
+        <tr>`
             <td>
-                <center> <h3>Welcome to the Faculty Dashboard</h3></center>
+                <centre><h4>Welcome to the Faculty Dashboard</h4></centre>
             </td>
         </tr>
         <tr>
             <td>
-                <center><img src="Faculty_Media/faculty logo.png" alt="Profile logo" width="100" height="100"></center>
-            </td>
-            <td>
-                You can manage student results and view courses here.
-                <br>
-                Stay updated and keep your dashboard organized efficiently.
-                <br>
-                You can manage student results and view courses here.
+                 <img src="Faculty_Media/faculty logo.png" alt="Faculty" class="faculty-img">
             </td>
         </tr>
         <tr>
             <td>
-                <ul>
+                <ul class="list-style">
                     <li>
                         My Courses
                     </li>
@@ -57,5 +51,9 @@
             <td><italic>Department    </italic></td> <td><underline>Computer Science Engineering</underline></td>
         </tr>
     </table>
+</div>
+
+    
+   
 </body>
 </html>
