--- a/Faculty/veiw_report.html
+++ b/Faculty/veiw_report.html
@@ -1,11 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Reports View</title>
+  <link rel="stylesheet" href="reports.css" />
 </head>
 <body>
-    
+  <h1 class="page-title">Reports</h1>
+
+  <section class="filters-section">
+    <form class="filters-form">
+      <div class="form-group">
+        <label for="course">Course</label>
+        <select id="course" name="course">
+          <option value="">Select Course</option>
+          <option value="CSE101">CSE101 - Intro to Programming</option>
+          <option value="CSE205">CSE205 - Data Structures</option>
+          <option value="CSE309">CSE309 - AI & ML</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label for="ay">Academic Year (AY)</label>
+        <select id="ay" name="ay">
+          <option value="">Select AY</option>
+          <option value="2023-24">2023-24</option>
+          <option value="2024-25">2024-25</option>
+          <option value="2025-26">2025-26</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label for="semester">Semester</label>
+        <select id="semester" name="semester">
+          <option value="">Select Semester</option>
+          <option value="Odd">Odd</option>
+          <option value="Even">Even</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label for="grade">Grade</label>
+        <select id="grade" name="grade">
+          <option value="">Select Grade</option>
+          <option value="A">A</option>
+          <option value="B">B</option>
+          <option value="C">C</option>
+          <option value="D">D</option>
+          <option value="F">F</option>
+        </select>
+      </div>
+
+      <div class="form-actions">
+        <button type="submit" class="btn filter-btn">Filter</button>
+      </div>
+    </form>
+  </section>
+
+  <section class="reports-section">
+    <h2>Grade Distribution</h2>
+    <table class="distribution-table">
+      <thead>
+        <tr>
+          <th>Grade</th>
+          <th>Count</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr><td>A</td><td>25</td></tr>
+        <tr><td>B</td><td>30</td></tr>
+        <tr><td>C</td><td>15</td></tr>
+        <tr><td>D</td><td>10</td></tr>
+        <tr><td>F</td><td>5</td></tr>
+      </tbody>
+    </table>
+
+    <h2>Summary</h2>
+    <table class="summary-table">
+      <tbody>
+        <tr>
+          <td><strong>Average Grade:</strong></td>
+          <td>B+</td>
+        </tr>
+        <tr>
+          <td><strong>Pass Percentage:</strong></td>
+          <td>85%</td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
 </body>
 </html>
