--- a/Faculty/veiw_stcourses.html
+++ b/Faculty/veiw_stcourses.html
@@ -1,11 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Course-wise Student List</title>
+  <link rel="stylesheet" href="students.css" />
 </head>
 <body>
-    
+  <h1 class="page-title">Course-wise Student List</h1>
+
+  <form class="insert-form" id="filter-form">
+    <div class="form-group">
+      <label for="course">Course</label>
+      <select id="course" name="course">
+        <option value="">Select Course</option>
+        <option value="BSc">BSc</option>
+        <option value="BA">BA</option>
+        <option value="BCom">BCom</option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label for="section">Section</label>
+      <select id="section" name="section">
+        <option value="">Select Section</option>
+        <option value="A">A</option>
+        <option value="B">B</option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label for="ay">Academic Year (AY)</label>
+      <select id="ay" name="ay">
+        <option value="">Select AY</option>
+        <option value="2023-24">2023-24</option>
+        <option value="2024-25">2024-25</option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label for="semester">Semester</label>
+      <select id="semester" name="semester">
+        <option value="">Select Semester</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+      </select>
+    </div>
+
+    <button type="submit" class="btn submit-btn">Filter</button>
+  </form>
+
+  <table class="results-table" id="students-table">
+    <thead>
+      <tr>
+        <th>StudentID</th>
+        <th>Name</th>
+        <th>Roll No</th>
+        <th>Email</th>
+        <th>Status</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- Sample data rows -->
+      <tr>
+        <td>STU001</td>
+        <td>Alice Johnson</td>
+        <td>101</td>
+        <td>alice@example.com</td>
+        <td>Active</td>
+      </tr>
+      <tr>
+        <td>STU002</td>
+        <td>Bob Smith</td>
+        <td>102</td>
+        <td>bob@example.com</td>
+        <td>Inactive</td>
+      </tr>
+      <!-- More rows can be added dynamically -->
+    </tbody>
+  </table>
 </body>
 </html>
