--- a/index.html
+++ b/index.html
@@ -4,38 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+  <link rel="stylesheet" href="indexs.css">
 </head>
 <body>
-    <center> <h1> Result Analysis Dashboard</h1></center>
-    <table border="5" align="center">
-        <tr>
-             <td>
-                <a href ="http://127.0.0.1:5500/Admin/Admin_index.html">
-                    <img src="Public_Media/admin_logo.png" alt=Admin logo width="300" height="300">
-
-                    <center>
-                        Admin
-                    </center>
+    <div class="container">
+        <center> <h1> Result Analysis Dashboard</h1></center>
+    <div class="grid">
+        <div class="card">
+        <a href ="http://127.0.0.1:5500/Admin/Admin_index.html">
+                    <img src="Public_Media/admin_logo.png" alt=Admin logo width="100" height="100">
+                     <h4>Admin</h4>
                 </a>
-            </td>
-            <td>
-                <a href ="Faculty/Faculty_index.html">
-                    <img src="Public_Media/faculty_logo.png" alt=Faculty member logo width="300" height="300">
-                    <center>
-                        Faculty
-                    </center>
+                </div>
+        <div class="card">
+        <a href ="Faculty/Faculty_index.html">
+                    <img src="Public_Media/faculty_logo.png" alt=Faculty member logo width="100" height="100">
+                <h4>Faculty</h4>
+                    </a>
+                </div>
+        <div class="card">
+        <a href ="Student/Student_index.html">
+                    <img src="Public_Media/student_logo.png" alt=Student logo width="100" height="100">
+                <h4>Student</h4>           
                 </a>
-            </td>
-            <td>
-                <a href ="Student/Student_index.html">
-                    <img src="Public_Media/student_logo.png" alt=Student logo width="300" height="300">
-                    <center>
-                        Student
-                    </center>
-                </a>
-            </td>
-           
-        </tr>
-    </table>
+                </div>
+    </div>
+</div>
+    
 </body>
 </html>
